--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>GoFood</title>
   </head>
-  <body style="background-color: #fffcf4">
+  <body style="background-color: #fcf8e8">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
