--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/20230226_184157_0000.png" />
+    <link rel="icon" href="%PUBLIC_URL%/20230226_184157_0000-modified.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>GoFood</title>
+    <title>FarmEasy</title>
   </head>
   <body style="background-color: #fcf8e8">
     <noscript>You need to enable JavaScript to run this app.</noscript>
